# LatticeGaurdSBOM_INFINITE

./: Dockerfile.frontend  package.json  pnpm-lock.yaml  pyproject.toml  readme.MD
artifacts/latticeguard-sbom/: err.json  err.txt  err2.json  err2.txt  err3.json  err3.txt  err4.json  err4.txt  err5.json  err5.txt  index.html  package.json  vite.config.ts
artifacts/latticeguard-sbom/.replit-artifact/: artifact.toml
artifacts/latticeguard-sbom/src/: App.tsx  index.css  main.tsx
artifacts/latticeguard-sbom/src/api/: client.ts  packages.ts  signing.ts  verify.ts
artifacts/latticeguard-sbom/src/components/: CryptoTerminal.tsx  (+3 more)
attached_assets/: Pasted--find-artifacts-latticeguard-sbom-src-components-type-f_1774372182056.txt  Pasted-I-have-a-LatticeGuard-SBOM-app-built-with-React-Vite-fr_1774195724770.txt  Pasted-Perfect-Here-s-the-complete-update-prompt-THE-COMPLETE-_1774194237735.txt  Pasted-Phase-1-Pre-Fetch-Safety-Gate-The-Most-Critical-Part-Th_1774368383922.txt  Pasted-Scenario-1-A-developer-onboards-to-a-new-codebase-They-_1774368420767.txt  Pasted-You-are-an-expert-full-stack-developer-and-UI-UX-design_1774028003655.txt
backend/: dockerfile  main.py  requirements.txt
backend/models/: schemas.py
backend/routes/: audit.py  license.py  namecheck.py  packages.py  risk.py  scan.py  signing.py  verify.py  vulnerabilities.py
backend/services/: crypto_service.py  license_service.py  name_check_service.py  npm_service.py  osv_service.py  pypi_service.py  risk_service.py  static_scan_service.py
backend/store/: audit_store.py  keystore.py  system_keystore.py
(+19 files in other folders)
