[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=46.0.5",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "liboqs-python>=0.14.1",
    "packaging>=26.0",
    "python-multipart>=0.0.22",
    "uvicorn[standard]>=0.42.0",
]
